commands_shell.txt
import datetime
from django.utils import timezone

from products.models import Category
from products.models import Brand
from products.models import Product
from orders.models import Order

Category.objects.all()
c = Category(code='100', name='Feminino', option='1', registered_at=timezone.now())
c.save()
Category.objects.all()

Brand.objects.all()
b = Brand(name="FATAL", level_price='1', registered_at=timezone.now())
b.save()
Brand.objects.all()

Product.objects.all()
p = Product(sku='1', name='Camiseta', brand=Brand.objects.filter(id=1)[0], category=Category.objects.filter(id=1)[0], size='S', quantity=10, unit_price=59.90, registered_by='eduardo', registered_at=timezone.now(), modified_at=timezone.now(), is_active=1)
p.save()
Product.objects.all()


Product.objects.filter(id=1)
Product.objects.filter(id=1)[0]
p = Product.objects.filter(id=1)[0]

o = Order.objects.filter(id=1)[0]
o = Order(cpf='0000', name='jhon doe', phone='0123456789', products_set.add(Product.objects.filter(id__in=[1])), price=59, registered_at=timezone.now(), registered_by='eduardo')
o.save()
o.products.all()
o.setOrderQuantityProduct()
p
o










.now(), registered_by='eduardo')
  File "<console>", line 1
SyntaxError: positional argument follows keyword argument
>>> o.products
<django.db.models.fields.related_descriptors.create_forward_many_to_many_manager.<locals>.ManyRelatedManager object at 0x000001DD24734F40>
>>> o.products.set
<bound method create_forward_many_to_many_manager.<locals>.ManyRelatedManager.set of <django.db.models.fields.related_descriptors.create_forward_many_to_many_manager.<locals>.ManyRelatedManager object at 0x000001DD24734B80>>
>>> o.products.set.add(p)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'function' object has no attribute 'add'
>>> o.products.set(p)
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\py\Projects\vst\lib\site-packages\django\db\models\fields\related_descriptors.py", line 992, in set
    objs = tuple(objs)
TypeError: 'Product' object is not iterable
>>> o.products.set(p[0])
Traceback (most recent call last):
  File "<console>", line 1, in <module>
TypeError: 'Product' object is not subscriptable
>>> o.products.set(Product.objects.filter(id__in=[1])
... o.save()
  File "<console>", line 2
    o.save()
    ^
SyntaxError: invalid syntax
>>> o.save()
>>> o
<Order: Order object (1)>
>>> o.products
<django.db.models.fields.related_descriptors.create_forward_many_to_many_manager.<locals>.ManyRelatedManager object at 0x000001DD24734B80>
>>> o
<Order: Order object (1)>
>>> o.save()
>>>
